designing chatting screen

--- a/login.html
+++ b/login.html
@@ -5,10 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>chat app</title>
 	<link rel="stylesheet" type="text/css" href="signup.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<div class="wrapper">
-		<section class="form signup">
+		<section class="form login">
 			<header>Realtime chat App</header>
 			<form action="#">
 				<div class="error-txt">This is an error message!</div>
@@ -18,8 +19,9 @@
 						<input type="text" placeholder="enter your email">
 			   		</div>
 			   		<div class="field input">
-							<label>Password</label>
-							<input type="password" placeholder="enter your password">
+						<label>Password</label>
+						<input type="password" placeholder="enter your password">
+						<i class="fa fa-eye" aria-hidden="true"></i>
 			   		</div>
 			   		
 			   		<div class="field button">
@@ -27,7 +29,7 @@
 			   		</div>
 					</div>
 			</form>
-			<div class="link">Already signed up? <a href="#">Login now</a></div>
+			<div class="link">Not yet signed up? <a href="#">Signup now</a></div>
 		</section>
 	</div>
 </body>
