--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>chat app</title>
 	<link rel="stylesheet" type="text/css" href="signup.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -28,6 +29,7 @@
 			   		<div class="field input">
 							<label>Password</label>
 							<input type="password" placeholder="enter your password">
+							<i class="fa fa-eye" aria-hidden="true"></i>
 			   		</div>
 			   		<div class="field image">
 							<label>Select image</label>
