--- a/users.html
+++ b/users.html
@@ -12,7 +12,7 @@
 		<section class="users">
 			<header>
 				<div class="content">
-					<img src="" alt="">
+					<img src="pic.jpg" alt="">
 					<div class="details">
 						<span>Coding Nepal</span>
 						<p>Active Now</p>
@@ -26,6 +26,19 @@
 				<input type="text" placeholder="enter user to search...">
 				<button><i class="fa fa-search" aria-hidden="true"></i></button>
 			</div>
+			<div class="users-list">
+				<a href="#">
+					<div class="content">
+						<img src="" alt="">
+						<div class="details">
+							<span>Coding Nepal</span>
+							<p>This is text message</p>
+						</div>
+					</div>
+					<div class="status-dot"><i class="fa fa-circle" aria-hidden="true"></i></div>
+				</a>
+			</div>
+		
 		</section>
 	 </div>
 
