user screen styling

--- a/users.html
+++ b/users.html
@@ -29,7 +29,57 @@
 			<div class="users-list">
 				<a href="#">
 					<div class="content">
-						<img src="" alt="">
+						<img src="pic.jpg" alt="">
+						<div class="details">
+							<span>Coding Nepal</span>
+							<p>This is text message</p>
+						</div>
+					</div>
+					<div class="status-dot"><i class="fa fa-circle" aria-hidden="true"></i></div>
+				</a>
+				<a href="#">
+					<div class="content">
+						<img src="pic.jpg" alt="">
+						<div class="details">
+							<span>Coding Nepal</span>
+							<p>This is text message</p>
+						</div>
+					</div>
+					<div class="status-dot"><i class="fa fa-circle" aria-hidden="true"></i></div>
+				</a>
+				<a href="#">
+					<div class="content">
+						<img src="pic.jpg" alt="">
+						<div class="details">
+							<span>Coding Nepal</span>
+							<p>This is text message</p>
+						</div>
+					</div>
+					<div class="status-dot"><i class="fa fa-circle" aria-hidden="true"></i></div>
+				</a>
+				<a href="#">
+					<div class="content">
+						<img src="pic.jpg" alt="">
+						<div class="details">
+							<span>Coding Nepal</span>
+							<p>This is text message</p>
+						</div>
+					</div>
+					<div class="status-dot"><i class="fa fa-circle" aria-hidden="true"></i></div>
+				</a>
+				<a href="#">
+					<div class="content">
+						<img src="pic.jpg" alt="">
+						<div class="details">
+							<span>Coding Nepal</span>
+							<p>This is text message</p>
+						</div>
+					</div>
+					<div class="status-dot"><i class="fa fa-circle" aria-hidden="true"></i></div>
+				</a>
+				<a href="#">
+					<div class="content">
+						<img src="pic.jpg" alt="">
 						<div class="details">
 							<span>Coding Nepal</span>
 							<p>This is text message</p>
