styling chat screen with html and css

--- a/chat.html
+++ b/chat.html
@@ -18,6 +18,19 @@
 					<p>Active now</p>
 				</div>
 			</header>
+			<div class="chat-box">
+				<div class="chat outgoing">
+					<div class="details">
+						<p>lorem ipsum dolloar sit amit lorem ipsum dolloar sit amitwwwwwwwwwwwwwwwwwwwwwwwwwwwww</p>
+					</div>
+				</div>
+				<div class="chat incoming">
+					<img src="pic.jpg" alt="">
+					<div class="details">
+						<p>lorem ipsum dolloar sit amitlorem ipsum dolloar sit amit</p>
+					</div>
+				</div>
+			</div>
 		</section>
 	</div>
 
