style the typing button

--- a/chat.html
+++ b/chat.html
@@ -30,7 +30,33 @@
 						<p>lorem ipsum dolloar sit amitlorem ipsum dolloar sit amit</p>
 					</div>
 				</div>
+				<div class="chat outgoing">
+					<div class="details">
+						<p>lorem ipsum dolloar sit amit lorem ipsum dolloar sit amitwwwwwwwwwwwwwwwwwwwwwwwwwwwww</p>
+					</div>
+				</div>
+				<div class="chat incoming">
+					<img src="pic.jpg" alt="">
+					<div class="details">
+						<p>lorem ipsum dolloar sit amitlorem ipsum dolloar sit amit</p>
+					</div>
+				</div>
+				<div class="chat outgoing">
+					<div class="details">
+						<p>lorem ipsum dolloar sit amit lorem ipsum dolloar sit amitwwwwwwwwwwwwwwwwwwwwwwwwwwwww</p>
+					</div>
+				</div>
+				<div class="chat incoming">
+					<img src="pic.jpg" alt="">
+					<div class="details">
+						<p>lorem ipsum dolloar sit amitlorem ipsum dolloar sit amit</p>
+					</div>
+				</div>
 			</div>
+			<form action="" class="typing-area">
+				<input type="text" placeholder="Type your message here...">
+				<button><i class="fa fa-telegram" aria-hidden="true"></i></button>
+			</form>
 		</section>
 	</div>
 
