chat area frontend completed

--- a/chat.html
+++ b/chat.html
@@ -43,7 +43,7 @@
 				</div>
 				<div class="chat outgoing">
 					<div class="details">
-						<p>lorem ipsum dolloar sit amit lorem ipsum dolloar sit amitwwwwwwwwwwwwwwwwwwwwwwwwwwwww</p>
+						<p>lorem ipsum dolloar sit amit lorem ipsum dolloar sit amit</p>
 					</div>
 				</div>
 				<div class="chat incoming">
