--- a/chat.html
+++ b/chat.html
@@ -21,7 +21,7 @@
 			<div class="chat-box">
 				<div class="chat outgoing">
 					<div class="details">
-						<p>lorem ipsum dolloar sit amit lorem ipsum dolloar sit amitwwwwwwwwwwwwwwwwwwwwwwwwwwwww</p>
+						<p>lorem ipsum dolloar sit amit lorem ipsum dolloar sit amit</p>
 					</div>
 				</div>
 				<div class="chat incoming">
@@ -32,7 +32,18 @@
 				</div>
 				<div class="chat outgoing">
 					<div class="details">
-						<p>lorem ipsum dolloar sit amit lorem ipsum dolloar sit amitwwwwwwwwwwwwwwwwwwwwwwwwwwwww</p>
+						<p>lorem ipsum dolloar sit amit lorem ipsum dolloar sit amit</p>
+					</div>
+				</div>
+				<div class="chat incoming">
+					<img src="pic.jpg" alt="">
+					<div class="details">
+						<p>lorem ipsum dolloar sit amitlorem ipsum dolloar sit amit</p>
+					</div>
+				</div>
+				<div class="chat outgoing">
+					<div class="details">
+						<p>lorem ipsum dolloar sit amit lorem ipsum dolloar sit amit</p>
 					</div>
 				</div>
 				<div class="chat incoming">
@@ -59,6 +70,7 @@
 			</form>
 		</section>
 	</div>
+	<script src="pas-show-hide.js"></script>
 
 </body>
 </html>
