--- a/signup.html
+++ b/signup.html
@@ -43,5 +43,6 @@
 			<div class="link">Already signed up? <a href="#">Login now</a></div>
 		</section>
 	</div>
+	<script src="pas-show-hide.js"></script>
 </body>
 </html>
