designing the search bar
designing the search bar using javascript

--- a/login.html
+++ b/login.html
@@ -32,5 +32,7 @@
 			<div class="link">Not yet signed up? <a href="#">Signup now</a></div>
 		</section>
 	</div>
+	<script src="pas-show-hide.js"></script>
 </body>
+
 </html>
